force-app/main/default/objects/FactorMaps__mdt/FactorMaps__mdt.object-meta.xml
<CustomObject>
    <label>Factor-Map</label>
    <pluralLabel>Factor-Mapings</pluralLabel>
</CustomObject>