force-app/main/default/objects/FactorMaps__mdt/fields/Fuel__c.field-meta.xml
<CustomField>
    <fullName>Fuel__c</fullName>
    <label>Fuel Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BE Fuel Cell</fullName>
                <default>true</default>
                <label>BE Fuel Cell</label>
            </value>
            <value>
                <fullName>E10</fullName>
            </value>
            <value>
                <fullName>E85</fullName>
            </value>
            <value>
                <fullName>HCFC-22/R-22</fullName>
            </value>
            <value>
                <fullName>HFC-134A/R-134A</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>R-404A</fullName>
            </value>
            <value>
                <fullName>R-407C</fullName>
            </value>
            <value>
                <fullName>R-410A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>