force-app/main/default/objects/FactorMaps__mdt/fields/NZC_EF__c.field-meta.xml
<CustomField>
    <fullName>NZC_EF__c</fullName>
    <label>NZC EF</label>
    <length>200</length>
    <type>Text</type>
</CustomField>