force-app/main/default/objects/FactorMaps__mdt/fields/NZC_EF_ID__c.field-meta.xml
<CustomField>
    <fullName>NZC_EF_ID__c</fullName>
    <label>NZC EF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>